--- a/src/frontend/styles.css
+++ b/src/frontend/styles.css
@@ -1,7 +1,7 @@
 /* Général */
 body {
   font-family: 'Arial', sans-serif;
-  background: linear-gradient(135deg, #f0f4fd, #ff30ba);
+  background: linear-gradient(135deg, #f0f4fd, #ff32bb);
   margin: 0;
   padding: 0;
   display: flex;
